# AgentBrake-Fusion

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ADAPTER_GUIDE.zh-CN.md  AGENTDOJO_COMPATIBILITY.zh-CN.md  AGENTDOJO_EXPERIMENT.zh-CN.md  AGENT_EXEC_GUARD_RECIPES.zh-CN.md  AGENT_PROFILE_ARCHITECTURE.zh-CN.md  ARCHITECTURE.zh-CN.md  BEGINNER_AGENT_ONBOARDING.zh-CN.md  BENCH_GATEWAY_GUIDE.zh-CN.md  BENCH_REPORT_GUIDE.zh-CN.md  FORMAL_AGENT_INTEGRATION.zh-CN.md  GATEWAY_GUIDE.zh-CN.md  PERSISTENT_SESSION_STATE_ACTION_GRAPH.zh-CN.md  POLICYGRAPH_RULEINDEX.zh-CN.md  POLICY_PACK_GUIDE.zh-CN.md  PROJECT_STATUS.zh-CN.md  README.zh-CN.md  REAL_AGENT_INTEGRATION.zh-CN.md  SANDBOX_GUIDE.zh-CN.md  SECOND_STAGE_USAGE.zh-CN.md  STUDIO_GUIDE.zh-CN.md  TEST_CASES.zh-CN.md  THIRD_STAGE_USAGE.zh-CN.md  TOOL_PARSER_PLUGIN_GUIDE.zh-CN.md  USAGE.zh-CN.md
docs/evaluations/: agentdojo.md  (+1 more)
experiments/: __init__.py
tests/: test_action_graph_parsers.py  test_action_policy.py  test_agent_trace_replay.py  test_agentdojo_toolgate.py  test_approval_memory_mcp_audit.py  test_asset_context.py  test_bench_metrics.py  test_control_plane_demo.py  test_control_plane_productization.py  test_eval_fast_mode.py  test_formal_agent_integration.py  test_gateway_bench_metrics.py  test_openclaw_quickstart.py  test_persistent_session_state.py  test_real_integration_features.py  test_secret_taint_levels.py  test_session_identity.py  test_stage2_features.py  test_stage3_gateway.py  test_state_replay.py  test_studio_pro.py  test_tool_introspection.py
(+1193 files in other folders)
